--- a/NayamiApp/View/CommentCell.xib
+++ b/NayamiApp/View/CommentCell.xib
@@ -36,7 +36,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IOo-fV-979">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IOo-fV-979">
                         <rect key="frame" x="9" y="27" width="90" height="90"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="90" id="HhC-Kb-CYk"/>
